feat: enhance text chunking and add Nomic embedding support
- Implemented improved text chunking with configurable size and overlap
- Added Nomic embedding model configuration
- Enhanced error handling and logging in ScdfStreamProcessor
- Updated PgVector configuration